# codex-as-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
rust/: Cargo.toml
rust/src/: anthropic_adapter.rs  auth.rs  main.rs  messages.rs  protocol.rs  provider.rs  server.rs
src/codex_as_api/: __init__.py  anthropic_adapter.py  auth.py  messages.py  protocol.py  provider.py  server.py
tests/: conftest.py  test_anthropic_adapter.py  test_auth.py  test_messages.py  test_protocol.py  test_provider.py  test_server.py
ts/: .npmrc  package-lock.json  package.json  tsup.config.ts
ts/src/: anthropic-adapter.ts  auth.ts  cli.ts  index.ts  messages.ts  protocol.ts  provider.ts  server.ts
ts/src/__tests__/: anthropic-adapter.test.ts  auth.test.ts  protocol.test.ts  provider.test.ts
