[package]
name = "codex-as-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codex-as-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
